[tool.poetry]
name = "surveys"
version = "0.1.0"
description = "A survey platform."
authors = ["Rezuan Dzibov <rezuan.dzbov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
