[tool.poetry]
name = "surveys"
version = "0.1.0"
description = "A survey platform."
authors = ["Rezuan Dzibov <rezuan.dzbov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
email-validator = "^1.2.1"
passlib = "^1.7.4"
bcrypt = "^3.2.2"
python-multipart = "^0.0.5"
PyJWT = "^2.4.0"
emails = "^0.6"
Jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.3"
black = "^22.3.0"
cognitive-complexity = "^1.2.0"
flake8-alphabetize = "^0.0.17"
flake8-annotations = "^2.9.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-polyfill = "^1.0.2"
flake8-variables-names = "^0.0.5"
flake8 = "^4.0.1"
pep8-naming = "^0.13.0"
pyflakes = "^2.4.0"
pytest = "^7.1.2"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.0"
pytest-asyncio = "^0.19.0"
asyncpg = "^0.26.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
